--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,22 @@
  <version>11.2.0</version>
 </dependency>
     
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-websocket</artifactId>
+    <version>4.0.0.RELEASE</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-messaging</artifactId>
+    <version>4.0.0.RELEASE</version>
+</dependency>
+
+    
+    
   </dependencies>
   <build>
     <finalName>projecttwo</finalName>
